--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-vector-icons": "^7.0.0",
-    "react-native-web": "~0.11.7"
-    
+    "react-native-web": "~0.11.7",
+    "react-navigation": "2.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
